a few cases of simpler language

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -2049,8 +2049,8 @@ menuDialog = main
 
 		subMenu = ignitionTableTbl,			"Ignition advance", 0, {isIgnitionEnabled}
 		subMenu = ignitionTableMap,			"Ignition advance", 0, {isIgnitionEnabled}
-		subMenu = ignitionCltCorrTable,			"Ign CLT correction", 0, {isIgnitionEnabled == 1}
-		subMenu = ignitionIatCorrTableTbl,	"Ign IAT correction", 0, {isIgnitionEnabled == 1}
+		subMenu = ignitionCltCorrTable,			"Engine Temp timing correction", 0, {isIgnitionEnabled == 1}
+		subMenu = ignitionIatCorrTableTbl,	"Intake Air Temp timing correction", 0, {isIgnitionEnabled == 1}
 		subMenu = std_separator
 
 		subMenu = dwellSettings,				"Dwell", 0, {isIgnitionEnabled == 1}
@@ -2088,8 +2088,8 @@ menuDialog = main
 		subMenu = primingFuelPulsePanel,	"Priming pulse", { 1 }, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ }
 		subMenu = std_separator
 
-		subMenu = crankingCltCurve,			"Fuel CLT multiplier"
-		subMenu = crankingCltCurveE100,		"Fuel CLT multiplier (Flex Fuel E85)", { flexSensorPin != @@ADC_CHANNEL_NONE@@ && flexCranking }, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ }
+		subMenu = crankingCltCurve,			"Fuel Engine Temp multiplier"
+		subMenu = crankingCltCurveE100,		"Fuel Engine Temp (Flex Fuel E85)", { flexSensorPin != @@ADC_CHANNEL_NONE@@ && flexCranking }, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ }
 		subMenu = crankingCycleFuelMultTbl,	"Fuel duration multiplier"
 		subMenu = crankingTpsCurve,			"Fuel TPS multiplier"
 		subMenu = std_separator
@@ -2097,14 +2097,14 @@ menuDialog = main
 		subMenu = crankingAdvanceCurve,		"Cranking ignition advance", {useSeparateAdvanceForCranking == 1}, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ }
 		subMenu = std_separator
 
-		subMenu = cltCrankingCurve,			"Cranking Idle Air CLT multiplier", {overrideCrankingIacSetting == 1}, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ }
+		subMenu = cltCrankingCurve,			"Cranking Idle Air Engine Temp multiplier", {overrideCrankingIacSetting == 1}, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ }
 
 	menu = "&Idle"
 		subMenu = idleSettings,				"Idle settings"
 		subMenu = idlehw,					"Idle hardware"@@if_ts_show_idle_hardware
 		subMenu = std_separator
 		subMenu = cltIdleRPMCurve,			"Target RPM"
-		subMenu = cltIdleCurve,				"Idle CLT multiplier"
+		subMenu = cltIdleCurve,				"Idle Engine Temp multiplier"
 		subMenu = std_separator
 		subMenu = idleTimingPidCorrDialog,	"Closed-loop idle timing"
 		subMenu = iacPidMultTbl,			"IAC PID multiplier", 0, {idleMode == 0 && useIacPidMultTable == 1}
