--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -2064,8 +2064,8 @@ menuDialog = main
 			groupChildMenu = ignAdder4Cfg,			"Ignition blend 4 bias", 0, {isIgnitionEnabled}
 			groupChildMenu = ignAdder4Table,		"Ignition blend table 4", 0, { isIgnitionEnabled && ignBlends4_blendParameter != 0 }
 		groupMenu = "Cylinder ign trims"
-			groupChildMenu = ignTrimTbl1,		"Ignition trim cyl 1"
-			groupChildMenu = ignTrimTbl2,		"Ignition trim cyl 2", 0, { isInjectionEnabled && cylindersCount >= 2 }@@if_ts_show_cylinder_2
+			groupChildMenu = ignTrimTbl1,		@@IGN_TRIM_1_NAME@@
+			groupChildMenu = ignTrimTbl2,		@@IGN_TRIM_2_NAME@@, 0, { isInjectionEnabled && cylindersCount >= 2 }@@if_ts_show_cylinder_2
 			groupChildMenu = ignTrimTbl3,		"Ignition trim cyl 3", 0, { isInjectionEnabled && cylindersCount >= 3 }@@if_ts_show_cylinder_3
 			groupChildMenu = ignTrimTbl4,		"Ignition trim cyl 4", 0, { isInjectionEnabled && cylindersCount >= 4 }@@if_ts_show_cylinder_4
 			groupChildMenu = ignTrimTbl5,		"Ignition trim cyl 5", 0, { isInjectionEnabled && cylindersCount >= 5 }@@if_ts_show_cylinder_5
@@ -4055,19 +4055,7 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		field = "Trigger error LED",					triggerErrorPin
 		field = "Debug Trigger Sync",					debugTriggerSync
 
-	dialog = softwareKnockCfg, "Sense"
-		field = "Enable",				enableSoftwareKnock
-		field = "Cylinder Bore",			cylinderBore, {enableSoftwareKnock}
-		field = "Estimated Knock Frequency",knockFrequency, {enableSoftwareKnock}
-		field = "Detection mode",   knockDetectionUseDoubleFrequency
-		field = "Detection Window Start",knockDetectionWindowStart, {enableSoftwareKnock}
-		field = "Sampling Duration",	knockSamplingDuration, {enableSoftwareKnock}
-		field = "Enable Knock Spectrogram",	enableKnockSpectrogram, {enableSoftwareKnock}
-		field = "Enable Knock Spectrogram Filter",	enableKnockSpectrogramFilter, {enableKnockSpectrogram}
-		field = "Knock Spectrum Sensitivity", knockSpectrumSensitivity, {enableKnockSpectrogram}
-
-		field = ""
-		field = "Select the nearest sensor for each cylinder"
+  dialog = knockCylinderMapping, "Select the nearest sensor for each cylinder"
 		field = "Cylinder 1",			knockBankCyl1,  {enableSoftwareKnock}
 		field = "Cylinder 2",			knockBankCyl2,  {enableSoftwareKnock && cylindersCount >= 2}@@if_ts_show_cylinder_2
 		field = "Cylinder 3",			knockBankCyl3,  {enableSoftwareKnock && cylindersCount >= 3}@@if_ts_show_cylinder_3
@@ -4080,6 +4068,18 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		field = "Cylinder 10",			knockBankCyl10, {enableSoftwareKnock && cylindersCount >= 10}@@if_ts_show_cylinder_10
 		field = "Cylinder 11",			knockBankCyl11, {enableSoftwareKnock && cylindersCount >= 11}@@if_ts_show_cylinder_11
 		field = "Cylinder 12",			knockBankCyl12, {enableSoftwareKnock && cylindersCount >= 12}@@if_ts_show_cylinder_12
+
+	dialog = softwareKnockCfg, "Sense"
+		field = "Enable",				enableSoftwareKnock
+		field = "Cylinder Bore",			cylinderBore, {enableSoftwareKnock}
+		field = "Estimated Knock Frequency",knockFrequency, {enableSoftwareKnock}
+		field = "Detection mode",   knockDetectionUseDoubleFrequency
+		field = "Detection Window Start",knockDetectionWindowStart, {enableSoftwareKnock}
+		field = "Sampling Duration",	knockSamplingDuration, {enableSoftwareKnock}
+		field = "Enable Knock Spectrogram",	enableKnockSpectrogram, {enableSoftwareKnock}
+		field = "Enable Knock Spectrogram Filter",	enableKnockSpectrogramFilter, {enableKnockSpectrogram}
+		field = "Knock Spectrum Sensitivity", knockSpectrumSensitivity, {enableKnockSpectrogram}
+		panel = knockCylinderMapping@@if_ts_show_knock_cylinder_mapping
 
 	dialog = softwareKnockResponseCfg, "Response"
 		field = knockRetardAggression,		knockRetardAggression
