setup/vehicle information

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -1941,8 +1941,8 @@ menuDialog = main
 ;	menu = "Data Logging"
 ;		subMenu = std_ms3SdConsole, "Browse / Import SD Card"
 
-	menu = "&Base &Engine"
-		subMenu = engineChars,				"Base engine"
+	menu = "&Setup"
+		subMenu = engineChars,				"Vehicle Information"
 		subMenu = dynoChars,				"Virtual Dyno engine"
 
 		groupMenu = "Limits and protection", {1}, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ }
@@ -4532,7 +4532,7 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
    		panel = limitsAndFallbackCenter, Center, { (cutFuelOnHardLimit || cutSparkOnHardLimit) && useCltBasedRpmLimit }
 
 ;			Engine->Base Engine Settings
-	dialog = engineChars, "Base Engine Settings"
+	dialog = engineChars, "Vehicle Information"
 		topicHelp = "baseHelp"
     field = "Layout",                                 uiMode
 		panel = baseEngineConfig
