--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -2024,7 +2024,7 @@ menuDialog = main
 
 		subMenu = std_separator
 
-		subMenu = cltFuelCorrCurve,			"Engine Temp enrichment", 0, {isInjectionEnabled == 1}
+		subMenu = cltFuelCorrCurve,			"Warmup enrichment", 0, {isInjectionEnabled == 1}
 		subMenu = iatFuelCorrCurve,			"IAT multiplier", 0, {isInjectionEnabled == 1}
 		subMenu = fuelClosedLoopDialog,	"Closed loop fuel correction", 0, {isInjectionEnabled == 1}
 		subMenu = coastingFuelCutControl,	"Deceleration fuel cutoff (DFCO)", 0, {isInjectionEnabled == 1}
@@ -4534,7 +4534,7 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 ;			Engine->Base Engine Settings
 	dialog = engineChars, "Vehicle Information"
 		topicHelp = "baseHelp"
-    field = "Layout",                                 uiMode
+    field = "Tuning View",                                 uiMode
 		panel = baseEngineConfig
 		panel = engineMetadata, {1}, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ }
 		panel = fuelStrategyPanel@@if_ts_show_fuel_strategy
