ts_show_etb_frequency

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -2088,10 +2088,10 @@ menuDialog = main
 		subMenu = primingFuelPulsePanel,	"Priming pulse", { 1 }, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ }
 		subMenu = std_separator
 
-		subMenu = crankingCltCurve,			"Fuel Engine Temp multiplier"
+		subMenu = crankingCltCurve,			"Cranking Fuel multiplier"
 		subMenu = crankingCltCurveE100,		"Fuel Engine Temp (Flex Fuel E85)", { flexSensorPin != @@ADC_CHANNEL_NONE@@ && flexCranking }, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ }
-		subMenu = crankingCycleFuelMultTbl,	"Fuel duration multiplier"
-		subMenu = crankingTpsCurve,			"Fuel TPS multiplier"
+		subMenu = crankingCycleFuelMultTbl,	"Cranking Fuel duration multiplier"
+		subMenu = crankingTpsCurve,			"Cranking Fuel TPS multiplier"@@if_ts_show_crankingTpsCurve
 		subMenu = std_separator
 
 		subMenu = crankingAdvanceCurve,		"Cranking ignition advance", {useSeparateAdvanceForCranking == 1}, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ }
@@ -4955,7 +4955,7 @@ dialog = tcuControls, "Transmission Settings"
 		field = "Disable ETB Motor",					pauseEtbControl
 		field = "H-Bridge #1 function",					etbFunctions1@@if_ts_show_hbridge_function
 		field = "H-Bridge #2 function",					etbFunctions2@@if_ts_show_hbridge_function
-		field = "PWM Frequency",						etbFreq
+		field = "PWM Frequency",						etbFreq@@if_ts_show_etb_frequency
 		field = "Minimum ETB position",					etbMinimumPosition
 		field = "Maximum ETB position",					etbMaximumPosition
 		field = ""
