Short term fuel trim

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -2026,7 +2026,7 @@ menuDialog = main
 
 		subMenu = cltFuelCorrCurve,			"Warmup enrichment", 0, {isInjectionEnabled == 1}
 		subMenu = iatFuelCorrCurve,			"IAT multiplier", 0, {isInjectionEnabled == 1}
-		subMenu = fuelClosedLoopDialog,	"Closed loop fuel correction", 0, {isInjectionEnabled == 1}
+		subMenu = fuelClosedLoopDialog,	"Short term fuel trim", 0, {isInjectionEnabled == 1}
 		subMenu = coastingFuelCutControl,	"Deceleration fuel cutoff (DFCO)", 0, {isInjectionEnabled == 1}
 		subMenu = std_separator
 
@@ -4215,7 +4215,7 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		field = "Max add",								stft_cellCfgs2_maxAdd
 		field = "Max remove",							stft_cellCfgs2_maxRemove
 
-	dialog = fuelClosedLoopDialog, "Closed loop fuel correction"
+	dialog = fuelClosedLoopDialog, "Short term fuel trim"
 		field = "Enabled",								fuelClosedLoopCorrectionEnabled
 
 		field = "Startup delay"							stft_startupDelay, {fuelClosedLoopCorrectionEnabled == 1}
