--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -2097,7 +2097,7 @@ menuDialog = main
 		subMenu = crankingAdvanceCurve,		"Cranking ignition advance", {useSeparateAdvanceForCranking == 1}, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ }
 		subMenu = std_separator
 
-		subMenu = cltCrankingCurve,			"Cranking Idle Air Engine Temp multiplier", {overrideCrankingIacSetting == 1}, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ }
+		subMenu = cltCrankingCurveDialog,			"Cranking Idle Air Engine Temp multiplier", {overrideCrankingIacSetting == 1}, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ }
 
 	menu = "&Idle"
 		subMenu = idleSettings,				"Idle settings"
@@ -2508,6 +2508,11 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		field = "Low flow coefficient", tChargeAirCoefMin
 		field = "High flow coefficient", tChargeAirCoefMax
 		field = "Max air flow", tChargeAirFlowMax
+
+  dialog = cltCrankingCurveDialog
+    field = "Cranking base IAC position",			crankingIACposition
+    field = "ETB idle maximum angle",				etbIdleThrottleRange
+    panel = cltCrankingCurve
 
 	dialog = tChargeSettings, "Estimated cylinder air temperature"
 		panel = tChargeGeneralSettings
