only:Accel Activation Threshold

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -4609,7 +4609,7 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 	dialog = TpsAccelPanel, "TPS"
 		field = "Set 'Debug Mode' to see detailed 'TPS acceleration enrichment' diagnostics"
 			field = "Length",						tpsAccelLookback
-		field = "Accel Threshold",				tpsAccelEnrichmentThreshold
+		field = "Accel Activation Threshold",				tpsAccelEnrichmentThreshold
 		field = "Decel Threshold",				tpsDecelEnleanmentThreshold
 ;		field = "Decel Multiplier",				tpsDecelEnleanmentMultiplier
 		field = "#Accelerator Pump model:"
