only:warmup fuel curve text

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -2024,7 +2024,7 @@ menuDialog = main
 
 		subMenu = std_separator
 
-		subMenu = cltFuelCorrCurve,			"Warmup enrichment", 0, {isInjectionEnabled == 1}
+		subMenu = cltFuelCorrCurveDialog,			"Warmup enrichment", 0, {isInjectionEnabled == 1}
 		subMenu = iatFuelCorrCurve,			"IAT multiplier", 0, {isInjectionEnabled == 1}
 		subMenu = fuelClosedLoopDialog,	"Short term fuel trim", 0, {isInjectionEnabled == 1}
 		subMenu = coastingFuelCutControl,	"Deceleration fuel cutoff (DFCO)", 0, {isInjectionEnabled == 1}
@@ -2448,6 +2448,14 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 [UserDefined]
 @@LIVE_DATA_PANELS_FROM_FILE@@
 @@BOARD_PANELS_FROM_FILE@@
+
+	dialog = cltFuelCorrCurveDialog
+		field = "This table is a global multiplier"
+		field = "1.00 means no correction"
+		field = "1.20 means 20% extra fuel"
+		field = "0.80% means 20% less fuel"
+		field = ""
+		panel = cltFuelCorrCurve
 
 	dialog = scriptTable1TblSettings, "", yAxis
 		field = "Name", scriptTableName1
