only:ts_show_injection_hardware

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -1965,7 +1965,7 @@ menuDialog = main
 	menu = "Fuel"
 		# basic
 		subMenu = injectorConfig,			"Injection configuration"
-		subMenu = injectionSettings,		"Injection hardware", {isInjectionEnabled == 1}, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ }
+		subMenu = injectionSettings,		"Injection hardware", {isInjectionEnabled == 1}, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ }@@if_ts_show_injection_hardware
 		subMenu = cylinderBankSelect,		"Cylinder bank selection", {isInjectionEnabled == 1}, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ }@@if_ts_show_cylinder_bank
 		subMenu = injectorNonlinear,		"Injector small-pulse correction", {isInjectionEnabled == 1}, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ }
 
@@ -2559,7 +2559,7 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 
 	dialog = ignitionSettings, "", xAxis
 		panel = ignitionBasic
-		panel = ignitionOutputs, { 1 }, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ }
+		panel = ignitionOutputs, { 1 }, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ }@@if_ts_show_ignitionOutputs
 
 	dialog = baseEngineConfig, "Engine Configuration"
 		field = "Number of cylinders",					cylindersCount@@if_ts_show_number_of_cylinders
