only:ts_show_useRunningMathForCranking

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -4583,7 +4583,7 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 
 	dialog = crankingFuel, "Fuel"
 		field = "Injection mode",						crankingInjectionMode
-		field = "Fuel Source For Cranking",				useRunningMathForCranking
+		field = "Fuel Source For Cranking",				useRunningMathForCranking@@if_ts_show_useRunningMathForCranking
 		field = "Base fuel mass",				cranking_baseFuel, {useRunningMathForCranking == 0}
 
 	dialog = crankingIAC, "Idle air valve"
@@ -4601,9 +4601,9 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		panel = primingPulse
 
 	dialog = crankingAdv, "Advanced"
-		field = "Enable flood clear",				isCylinderCleanupEnabled
-		field = "Enable faster engine spin-up",			isFasterEngineSpinUpEnabled
-		field = "Use Advance Corrections for cranking",	useAdvanceCorrectionsForCranking
+		field = "Enable flood clear",				isCylinderCleanupEnabled@@if_ts_show_flood_clear
+		field = "Enable faster engine spin-up",			isFasterEngineSpinUpEnabled@@if_ts_show_faster_spin_up
+		field = "Use Advance Corrections for cranking",	useAdvanceCorrectionsForCranking@@if_ts_show_AdvanceCorrectionsForCranking
 		field = "Use Flex Fuel cranking table",			flexCranking
 
 ;			Cranking->Cranking Settings
