--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -3900,7 +3900,6 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		field = "A/C RPM target",						acIdleRpmTarget@@if_ts_show_air_conditioning
 		field = "Fan #1 adder",							fan1ExtraIdle
 		field = "Fan #2 adder",							fan2ExtraIdle
-		field = "Dashpot/Taper Initial IAC Adder",	    iacByTpsTaper
 
 	dialog = idleGating, "Idle Detection Thresholds"
 		field = "TPS threshold",	idlePidDeactivationTpsThreshold
@@ -3914,6 +3913,7 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		field = "Override Idle VE table load axis", idleVeOverrideMode, { useSeparateVeForIdle == 1 }
 		field = "Use idle tables for cranking taper",		useSeparateIdleTablesForCrankingTaper
 		field = "Use coasting idle table",	useIacTableForCoasting
+		field = "Dashpot coasting-to-idle Initial idle Adder",	    iacByTpsTaper
 		field = "Dashpot coasting-to-idle Hold time", iacByTpsHoldTime
 		field = "Dashpot coasting-to-idle Decay time", iacByTpsDecayTime
 
