only:KNOCK_RPM_TABLE_NAME

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -389,7 +389,7 @@ enable2ndByteCanID = false
 
 @@BOARD_CURVES_FROM_FILE@@
 
-	curve = knockThresholdCurve, "Engine knock threshold RPM based"
+	curve = knockThresholdCurve, @@KNOCK_RPM_TABLE_NAME@@
 		columnLabel = "RPM", "Threshold"
 		xAxis		=  0, 8000, 9
 		yAxis		=  0,  8, 10
@@ -3909,7 +3909,7 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 
 	dialog = idleExtra, "Extra Idle Features"
 		field = "Use idle ignition table",	useSeparateAdvanceForIdle
-		field = "Use idle VE table",		useSeparateVeForIdle
+		field = "Use idle VE table",		useSeparateVeForIdle@@if_ts_show_useSeparateVeForIdle
 		field = "Override Idle VE table load axis", idleVeOverrideMode, { useSeparateVeForIdle == 1 }
 		field = "Use idle tables for cranking taper",		useSeparateIdleTablesForCrankingTaper
 		field = "Use coasting idle table",	useIacTableForCoasting
