--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -2231,11 +2231,11 @@ menuDialog = main
 		subMenu = std_separator
 
 		# SENT interface
-		subMenu = sentInputs,				"SENT inputs"
-		subMenu = std_separator
+		subMenu = sentInputs,				"SENT inputs"@@if_ts_show_sent
+		subMenu = std_separator@@if_ts_show_sent
 
 		# Misc sensors
-		groupMenu = "Oil sensors"
+		groupMenu = "Oil sensors"@@if_ts_show_oil_sensors
 		groupChildMenu = oilPressureSensor,	"Oil pressure"@@if_ts_show_oil_pressure_sensor
 		groupChildMenu = oilTempSensor,		"Oil temp sensor"@@if_ts_show_oil_temp_sensor
 
@@ -3267,8 +3267,8 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 
 	dialog = fuelLevelSettings
 		field = "Input channel",	fuelLevelSensor
-		field = "Low threshold",	fuelLevelLowThresholdVoltage, {fuelLevelSensor != @@ADC_CHANNEL_NONE@@}
-		field = "High threshold",	fuelLevelHighThresholdVoltage, {fuelLevelSensor != @@ADC_CHANNEL_NONE@@}
+		field = "Low threshold",	fuelLevelLowThresholdVoltage, {fuelLevelSensor != @@ADC_CHANNEL_NONE@@}@@if_ts_show_fuel_threshold
+		field = "High threshold",	fuelLevelHighThresholdVoltage, {fuelLevelSensor != @@ADC_CHANNEL_NONE@@}@@if_ts_show_fuel_threshold
 		field = "Filter Alpha",		fuelLevelAveragingAlpha
 		field = "Update period",	fuelLevelUpdatePeriodSec
 		panel = fuelLevelCurve
