ts_show_FractionDivisor

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -4621,7 +4621,7 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 ;		field = "Decel Multiplier",				tpsDecelEnleanmentMultiplier
 		field = "#Accelerator Pump model:"
 		field = "Fraction Period",				tpsAccelFractionPeriod
-		field = "Fraction Divisor",				tpsAccelFractionDivisor
+		field = "Fraction Divisor",				tpsAccelFractionDivisor@@if_ts_show_FractionDivisor
 
 	dialog = WallWettingAccelPanel, "Wall Wetting (alpha version)"
 		field = "Wall fueling model type",				complexWallModel
