only:ts_show_ve_blend

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -1993,15 +1993,15 @@ menuDialog = main
     subMenu = veTableMap,    @@VE_MENU_MAP_NAME@@, 0, {isInjectionEnabled}
 		@@BOARD_VE_MENU_FROM_FILE@@
 
-		groupMenu = "VE blend tables"
-		groupChildMenu = veBlend1Cfg,		"VE blend 1 bias", 0, {isInjectionEnabled}
-		groupChildMenu = veBlend1Table,		"VE blend table 1", 0, { isInjectionEnabled && veBlends1_blendParameter != 0 }
-		groupChildMenu = veBlend2Cfg,		"VE blend 2 bias", 0, {isInjectionEnabled}
-		groupChildMenu = veBlend2Table,		"VE blend table 2", 0, { isInjectionEnabled && veBlends2_blendParameter != 0 }
-		groupChildMenu = veBlend3Cfg,		"VE blend 3 bias", 0, {isInjectionEnabled}
-		groupChildMenu = veBlend3Table,		"VE blend table 3", 0, { isInjectionEnabled && veBlends3_blendParameter != 0 }
-		groupChildMenu = veBlend4Cfg,		"VE blend 4 bias", 0, {isInjectionEnabled}
-		groupChildMenu = veBlend4Table,		"VE blend table 4", 0, { isInjectionEnabled && veBlends4_blendParameter != 0 }
+		groupMenu = "VE blend tables"@@if_ts_show_ve_blend
+		groupChildMenu = veBlend1Cfg,		"VE blend 1 bias", 0, {isInjectionEnabled}@@if_ts_show_ve_blend
+		groupChildMenu = veBlend1Table,		"VE blend table 1", 0, { isInjectionEnabled && veBlends1_blendParameter != 0 }@@if_ts_show_ve_blend
+		groupChildMenu = veBlend2Cfg,		"VE blend 2 bias", 0, {isInjectionEnabled}@@if_ts_show_ve_blend
+		groupChildMenu = veBlend2Table,		"VE blend table 2", 0, { isInjectionEnabled && veBlends2_blendParameter != 0 }@@if_ts_show_ve_blend
+		groupChildMenu = veBlend3Cfg,		"VE blend 3 bias", 0, {isInjectionEnabled}@@if_ts_show_ve_blend
+		groupChildMenu = veBlend3Table,		"VE blend table 3", 0, { isInjectionEnabled && veBlends3_blendParameter != 0 }@@if_ts_show_ve_blend
+		groupChildMenu = veBlend4Cfg,		"VE blend 4 bias", 0, {isInjectionEnabled}@@if_ts_show_ve_blend
+		groupChildMenu = veBlend4Table,		"VE blend table 4", 0, { isInjectionEnabled && veBlends4_blendParameter != 0 }@@if_ts_show_ve_blend
 
 #if LAMBDA
 		subMenu = lambdaTableTbl,				"Target lambda", 0, {isInjectionEnabled == 1}
