--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -882,12 +882,12 @@ curve = rangeMatrix, "Range Switch Input Matrix"
 		xBins = veBlends1_blendBins, veBlendParameter1
 		yBins = veBlends1_blendValues
 
-	curve = veBlend2Bias, "VE blend 2 bias"
-		columnLabel = "param", "bias"
-		xAxis = 0, 100, 11
-		yAxis = 0, 100, 5
-		xBins = veBlends2_blendBins, veBlendParameter2
-		yBins = veBlends2_blendValues
+	curve = veBlend2Bias, "VE blend 2 bias"@@if_ts_show_veBlends2
+		columnLabel = "param", "bias"@@if_ts_show_veBlends2
+		xAxis = 0, 100, 11@@if_ts_show_veBlends2
+		yAxis = 0, 100, 5@@if_ts_show_veBlends2
+		xBins = veBlends2_blendBins, veBlendParameter2@@if_ts_show_veBlends2
+		yBins = veBlends2_blendValues@@if_ts_show_veBlends2
 
 	curve = veBlend3Bias, "VE blend 3 bias"
 		columnLabel = "param", "bias"
@@ -1112,12 +1112,12 @@ curve = rangeMatrix, "Range Switch Input Matrix"
 		zBins		= veBlends1_table
 		gridOrient  = 250, 0, 340
 
-	table = veBlend2Table, veBlend2Map, "VE blend 2", 1
-		xyLabels = "RPM", "Fueling Load"
-		xBins		= veBlends2_rpmBins, RPMValue
-		yBins		= veBlends2_loadBins, fuelingLoad
-		zBins		= veBlends2_table
-		gridOrient  = 250, 0, 340
+	table = veBlend2Table, veBlend2Map, "VE blend 2", 1@@if_ts_show_veBlends2
+		xyLabels = "RPM", "Fueling Load"@@if_ts_show_veBlends2
+		xBins		= veBlends2_rpmBins, RPMValue@@if_ts_show_veBlends2
+		yBins		= veBlends2_loadBins, fuelingLoad@@if_ts_show_veBlends2
+		zBins		= veBlends2_table@@if_ts_show_veBlends2
+		gridOrient  = 250, 0, 340@@if_ts_show_veBlends2
 
 	table = veBlend3Table, veBlend3Map, "VE blend 3", 1
 		xyLabels = "RPM", "Fueling Load"
@@ -2916,17 +2916,17 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		field = "Y axis override (set Zero for no override)", veBlends1_yAxisOverride, {veBlends1_blendParameter}
 		panel = veBlend1Bias, {veBlends1_blendParameter}
 
-	dialog = veBlend2Cfg, "VE blend 2 config"
-		field = "#The bias table controls how much of the blend table"
-		field = "#is mixed in to the VE table. For example, a value of"
-		field = "#+10 in the table, with 50 as the current bias will result"
-		field = "#in +5.0% added to the VE. Note that this doesn't add 5% VE,"
-		field = "instead, it adds 5% to the current VE value, multiplying VE by 1.05."
-		field = "#The X axis of the bias table is controlled by the selected blend"
-		field = "#parameter below."
-		field = "Blend parameter", veBlends2_blendParameter
-		field = "Y axis override (set Zero for no override)", veBlends2_yAxisOverride, {veBlends2_blendParameter}
-		panel = veBlend2Bias, {veBlends2_blendParameter}
+	dialog = veBlend2Cfg, "VE blend 2 config"@@if_ts_show_veBlends2
+		field = "#The bias table controls how much of the blend table"@@if_ts_show_veBlends2
+		field = "#is mixed in to the VE table. For example, a value of"@@if_ts_show_veBlends2
+		field = "#+10 in the table, with 50 as the current bias will result"@@if_ts_show_veBlends2
+		field = "#in +5.0% added to the VE. Note that this doesn't add 5% VE,"@@if_ts_show_veBlends2
+		field = "instead, it adds 5% to the current VE value, multiplying VE by 1.05."@@if_ts_show_veBlends2
+		field = "#The X axis of the bias table is controlled by the selected blend"@@if_ts_show_veBlends2
+		field = "#parameter below."@@if_ts_show_veBlends2
+		field = "Blend parameter", veBlends2_blendParameter@@if_ts_show_veBlends2
+		field = "Y axis override (set Zero for no override)", veBlends2_yAxisOverride, {veBlends2_blendParameter}@@if_ts_show_veBlends2
+		panel = veBlend2Bias, {veBlends2_blendParameter}@@if_ts_show_veBlends2
 
 	dialog = veBlend3Cfg, "VE blend 3 config"
 		field = "#The bias table controls how much of the blend table"
