--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -889,19 +889,19 @@ curve = rangeMatrix, "Range Switch Input Matrix"
 		xBins = veBlends2_blendBins, veBlendParameter2@@if_ts_show_veBlends2
 		yBins = veBlends2_blendValues@@if_ts_show_veBlends2
 
-	curve = veBlend3Bias, "VE blend 3 bias"
-		columnLabel = "param", "bias"
-		xAxis = 0, 100, 11
-		yAxis = 0, 100, 5
-		xBins = veBlends3_blendBins, veBlendParameter3
-		yBins = veBlends3_blendValues
+	curve = veBlend3Bias, "VE blend 3 bias"@@if_ts_show_veBlends3
+		columnLabel = "param", "bias"@@if_ts_show_veBlends3
+		xAxis = 0, 100, 11@@if_ts_show_veBlends3
+		yAxis = 0, 100, 5@@if_ts_show_veBlends3
+		xBins = veBlends3_blendBins, veBlendParameter3@@if_ts_show_veBlends3
+		yBins = veBlends3_blendValues@@if_ts_show_veBlends3
 
-	curve = veBlend4Bias, "VE blend 4 bias"
-		columnLabel = "param", "bias"
-		xAxis = 0, 100, 11
-		yAxis = 0, 100, 5
-		xBins = veBlends4_blendBins, veBlendParameter4
-		yBins = veBlends4_blendValues
+	curve = veBlend4Bias, "VE blend 4 bias"@@if_ts_show_veBlends4
+		columnLabel = "param", "bias"@@if_ts_show_veBlends4
+		xAxis = 0, 100, 11@@if_ts_show_veBlends4
+		yAxis = 0, 100, 5@@if_ts_show_veBlends4
+		xBins = veBlends4_blendBins, veBlendParameter4@@if_ts_show_veBlends4
+		yBins = veBlends4_blendValues@@if_ts_show_veBlends4
 
 	curve = boostOpenLoopBlend1Bias, "Boost open loop blend 1 bias"
 		columnLabel = "param", "bias"
@@ -1119,19 +1119,19 @@ curve = rangeMatrix, "Range Switch Input Matrix"
 		zBins		= veBlends2_table@@if_ts_show_veBlends2
 		gridOrient  = 250, 0, 340@@if_ts_show_veBlends2
 
-	table = veBlend3Table, veBlend3Map, "VE blend 3", 1
-		xyLabels = "RPM", "Fueling Load"
-		xBins		= veBlends3_rpmBins, RPMValue
-		yBins		= veBlends3_loadBins, fuelingLoad
-		zBins		= veBlends3_table
-		gridOrient  = 250, 0, 340
+	table = veBlend3Table, veBlend3Map, "VE blend 3", 1@@if_ts_show_veBlends3
+		xyLabels = "RPM", "Fueling Load"@@if_ts_show_veBlends3
+		xBins		= veBlends3_rpmBins, RPMValue@@if_ts_show_veBlends3
+		yBins		= veBlends3_loadBins, fuelingLoad@@if_ts_show_veBlends3
+		zBins		= veBlends3_table@@if_ts_show_veBlends3
+		gridOrient  = 250, 0, 340@@if_ts_show_veBlends3
 
-	table = veBlend4Table, veBlend4Map, "VE blend 4", 1
-		xyLabels = "RPM", "Fueling Load"
-		xBins		= veBlends4_rpmBins, RPMValue
-		yBins		= veBlends4_loadBins, fuelingLoad
-		zBins		= veBlends4_table
-		gridOrient  = 250, 0, 340
+	table = veBlend4Table, veBlend4Map, "VE blend 4", 1@@if_ts_show_veBlends4
+		xyLabels = "RPM", "Fueling Load"@@if_ts_show_veBlends4
+		xBins		= veBlends4_rpmBins, RPMValue@@if_ts_show_veBlends4
+		yBins		= veBlends4_loadBins, fuelingLoad@@if_ts_show_veBlends4
+		zBins		= veBlends4_table@@if_ts_show_veBlends4
+		gridOrient  = 250, 0, 340@@if_ts_show_veBlends4
 
 	table = boostOpenBlend1Table, boostOpenBlend1Map, "Boost open loop blend 1", 1
 		xyLabels = "RPM", "TPS"
@@ -2928,29 +2928,29 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		field = "Y axis override (set Zero for no override)", veBlends2_yAxisOverride, {veBlends2_blendParameter}@@if_ts_show_veBlends2
 		panel = veBlend2Bias, {veBlends2_blendParameter}@@if_ts_show_veBlends2
 
-	dialog = veBlend3Cfg, "VE blend 3 config"
-		field = "#The bias table controls how much of the blend table"
-		field = "#is mixed in to the VE table. For example, a value of"
-		field = "#+10 in the table, with 50 as the current bias will result"
-		field = "#in +5.0% added to the VE. Note that this doesn't add 5% VE,"
-		field = "instead, it adds 5% to the current VE value, multiplying VE by 1.05."
-		field = "#The X axis of the bias table is controlled by the selected blend"
-		field = "#parameter below."
-		field = "Blend parameter", veBlends3_blendParameter
-		field = "Y axis override (set Zero for no override)", veBlends3_yAxisOverride, {veBlends3_blendParameter}
-		panel = veBlend3Bias, {veBlends3_blendParameter}
+	dialog = veBlend3Cfg, "VE blend 3 config"@@if_ts_show_veBlends3
+		field = "#The bias table controls how much of the blend table"@@if_ts_show_veBlends3
+		field = "#is mixed in to the VE table. For example, a value of"@@if_ts_show_veBlends3
+		field = "#+10 in the table, with 50 as the current bias will result"@@if_ts_show_veBlends3
+		field = "#in +5.0% added to the VE. Note that this doesn't add 5% VE,"@@if_ts_show_veBlends3
+		field = "instead, it adds 5% to the current VE value, multiplying VE by 1.05."@@if_ts_show_veBlends3
+		field = "#The X axis of the bias table is controlled by the selected blend"@@if_ts_show_veBlends3
+		field = "#parameter below."@@if_ts_show_veBlends3
+		field = "Blend parameter", veBlends3_blendParameter@@if_ts_show_veBlends3
+		field = "Y axis override (set Zero for no override)", veBlends3_yAxisOverride, {veBlends3_blendParameter}@@if_ts_show_veBlends3
+		panel = veBlend3Bias, {veBlends3_blendParameter}@@if_ts_show_veBlends3
 
-	dialog = veBlend4Cfg, "VE blend 4 config"
-		field = "#The bias table controls how much of the blend table"
-		field = "#is mixed in to the VE table. For example, a value of"
-		field = "#+10 in the table, with 50 as the current bias will result"
-		field = "#in +5.0% added to the VE. Note that this doesn't add 5% VE,"
-		field = "instead, it adds 5% to the current VE value, multiplying VE by 1.05."
-		field = "#The X axis of the bias table is controlled by the selected blend"
-		field = "#parameter below."
-		field = "Blend parameter", veBlends4_blendParameter
-		field = "Y axis override (set Zero for no override)", veBlends4_yAxisOverride, {veBlends4_blendParameter}
-		panel = veBlend4Bias, {veBlends4_blendParameter}
+	dialog = veBlend4Cfg, "VE blend 4 config"@@if_ts_show_veBlends4
+		field = "#The bias table controls how much of the blend table"@@if_ts_show_veBlends4
+		field = "#is mixed in to the VE table. For example, a value of"@@if_ts_show_veBlends4
+		field = "#+10 in the table, with 50 as the current bias will result"@@if_ts_show_veBlends4
+		field = "#in +5.0% added to the VE. Note that this doesn't add 5% VE,"@@if_ts_show_veBlends4
+		field = "instead, it adds 5% to the current VE value, multiplying VE by 1.05."@@if_ts_show_veBlends4
+		field = "#The X axis of the bias table is controlled by the selected blend"@@if_ts_show_veBlends4
+		field = "#parameter below."@@if_ts_show_veBlends4
+		field = "Blend parameter", veBlends4_blendParameter@@if_ts_show_veBlends4
+		field = "Y axis override (set Zero for no override)", veBlends4_yAxisOverride, {veBlends4_blendParameter}@@if_ts_show_veBlends4
+		panel = veBlend4Bias, {veBlends4_blendParameter}@@if_ts_show_veBlends4
 
 	indicatorPanel = isBoostControlledPanel, 1
 		indicator = {isBoostControlled}, "No Boost Control", "Boost Control Active"
