--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -2096,7 +2096,7 @@ menuDialog = main
 		subMenu = crankingAdvanceCurve,		"Cranking ignition advance", {useSeparateAdvanceForCranking == 1}, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ }
 		subMenu = std_separator
 
-		subMenu = cltCrankingCurveDialog,			"Cranking Idle Air Engine Temp multiplier", {overrideCrankingIacSetting == 1}, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ }
+		subMenu = cltCrankingCurveDialog,			"Cranking Idle Air Engine Temp multiplier", 1, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ }
 
 	menu = "&Idle"
 		subMenu = idleSettings,				"Idle settings"
