--- a/.github/workflows/custom-board-build/action.yaml
+++ b/.github/workflows/custom-board-build/action.yaml
@@ -84,12 +84,12 @@ inputs:
 runs:
   using: "composite"
   steps:
-    - name: Check branch name
-      shell: bash
-      if: ${{ contains(github.ref_name, '.') }}
-      run: |
-        : Check branch name
-        echo '::error::Branch names must not contain ".", this breaks firmware autoupdates. Branch name is "${{ github.ref_name }}".' && exit 1
+#    - name: Check branch name
+#      shell: bash
+#      if: ${{ contains(github.ref_name, '.') }}
+#      run: |
+#        : Check branch name
+#        echo '::error::Branch names must not contain ".", this breaks firmware autoupdates. Branch name is "${{ github.ref_name }}".' && exit 1
 
     - name: Mask Secrets
       shell: bash
