only:VE_BLEND1_TABLE_NAME

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -1105,7 +1105,7 @@ curve = rangeMatrix, "Range Switch Input Matrix"
 		zBins		= ignBlends4_table
 		gridOrient  = 250, 0, 340
 
-	table = veBlend1Table, veBlend1Map, "VE blend 1", 1
+	table = veBlend1Table, veBlend1Map, @@VE_BLEND1_TABLE_NAME@@, 1
 		xyLabels = "RPM", "Fueling Load"
 		xBins		= veBlends1_rpmBins, RPMValue
 		yBins		= veBlends1_loadBins, fuelingLoad
