--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -1908,6 +1908,7 @@ gaugeCategory = GPPWM Outputs
 	indicator =							{ sd_msd },			"No SD USB",				"SD USB",  white,  black,  green,  black
 ;	indicator =		{ sd_active_wr },		"SD WR",		"SD WR",  white,  black,  green,  black
 ;	indicator =		{ sd_active_rd },		"SD RD",		"SD RD",  white,  black,  green,  black
+	indicator =		{ isTuningNow },		"",		"Tuning Detected",  white,  black,  green,  black
 	indicator =			{ etb1etbRevLimitActive },	"No ETB RPM Limit",	"ETB RPM Limit",  white,  black, yellow,  black
 
 	indicator = { wbo0_hasFault }, { WBO0: bitStringValue(wboFaultCodeList, wb1faultCode)}, { WBO0: bitStringValue(wboFaultCodeList, wb1faultCode)}, white, black, red, black
