update flash structure & TS config

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -493,22 +493,6 @@ enable2ndByteCanID = false
 		yBins		= map_samplingWindow
 		gauge		= MAPGauge
 
-	curve = injectorsDeadTime, "Injector dead time"
-		columnLabel = "Battery", "Dead Time"
-		xAxis		= 6, 16, 11
-		yAxis		= 0, 8, 9
-		xBins		= injector_battLagCorrBins, VBatt
-		yBins		= injector_battLagCorr
-		gauge		= VBattGauge
-
-	curve = injectorsSecondaryDeadTime, "Secondary injector dead time"
-		columnLabel = "Battery", "Dead Time"
-		xAxis		= 6, 16, 11
-		yAxis		= 0, 8, 9
-		xBins		= injectorSecondary_battLagCorrBins, VBatt
-		yBins		= injectorSecondary_battLagCorr
-		gauge		= VBattGauge
-
 	curve = vrThresholdCurve1, "VR 1 Threshold"
 		columnLabel = "RPM", "Voltage"
 		xAxis		= 0, 8000, 9
@@ -1476,6 +1460,18 @@ curve = rangeMatrix, "Range Switch Input Matrix"
 		xBins		= alternatorVoltageTargetRpmBins,  RPMValue
 		yBins		= alternatorVoltageTargetLoadBins,  ignitionLoad
 		zBins		= alternatorVoltageTargetTable
+
+	table = injectorsDeadTime, injectorsDeadTimeMap, "Injector dead time"
+		xyLabels = "Battery", "Pressure"
+		xBins		= injector_battLagCorrBattBins, VBatt
+		yBins		= injector_battLagCorrPressBins, pressureCorrectionReference
+		zBins		= injector_battLagCorrTable
+
+	table = injectorsSecondaryDeadTime, injectorsSecondaryDeadTimeMap, "Secondary injector dead time"
+		xyLabels = "Battery", "Pressure"
+		xBins		= injectorSecondary_battLagCorrBattBins, VBatt
+		yBins		= injectorSecondary_battLagCorrPressBins, pressureCorrectionReference
+		zBins		= injectorSecondary_battLagCorrTable
 
 [GaugeConfigurations]
 @@LIVE_DATA_GAUGES_FROM_FILE@@
