--- a/firmware/config/boards/hellen/alphax-8chan/board_popular_vehicles.ini
+++ b/firmware/config/boards/hellen/alphax-8chan/board_popular_vehicles.ini
@@ -1,3 +1,4 @@
 commandButton = "GM LCV 2.5NA",		        cmd_set_engine_type_GM_LCV
 commandButton = "GM LTG 2.0T",		        cmd_set_engine_type_GM_LTG
 commandButton = "GM Gen5 SBC",      cmd_set_engine_type_GM_SBC_GEN5
+commandButton = "Small Block Chevy",		        cmd_set_engine_type_GM_SBC
