--- a/firmware/config/boards/hellen/uaefi/board_commands.ini
+++ b/firmware/config/boards/hellen/uaefi/board_commands.ini
@@ -1,2 +1,3 @@
 cmd_set_engine_type_HONDA_OBD1		= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_SET_ENGINE_TYPE_16_hex@@@@engine_type_e_HONDA_OBD1_16_hex@@"
 cmd_set_engine_type_vag_5				= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_SET_ENGINE_TYPE_16_hex@@@@engine_type_e_VAG_5_CYL_16_hex@@"
+cmd_set_engine_type_GM_SBC_GEN5		        = "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_SET_ENGINE_TYPE_16_hex@@@@engine_type_e_GM_SBC_GEN5_16_hex@@"
