--- a/firmware/config/boards/hellen/uaefi/board_popular_vehicles.ini
+++ b/firmware/config/boards/hellen/uaefi/board_popular_vehicles.ini
@@ -1,3 +1,4 @@
 commandButton = "Honda OBD1", cmd_set_engine_type_HONDA_OBD1
 
 commandButton = "VAG i5",			cmd_set_engine_type_vag_5
+commandButton = "Small Block Chevy",		        cmd_set_engine_type_GM_SBC
