--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -1146,16 +1146,16 @@ curve = rangeMatrix, "Range Switch Input Matrix"
 		gridOrient  = 250, 0, 340
 
 	table = targetAfrBlend1Table, targetAfrBlend1Map, "Target AFR adder 1", 1
-		xyLabels = "RPM", "TPS"
+		xyLabels = "RPM", "Fueling Load"
 		xBins		= targetAfrBlends1_rpmBins, RPMValue
-		yBins		= targetAfrBlends1_loadBins, TPSValue
+		yBins		= targetAfrBlends1_loadBins, fuelingLoad
 		zBins		= targetAfrBlends1_table
 		gridOrient	= 250, 0, 340
 
 	table = targetAfrBlend2Table, targetAfrBlend2Map, "Target AFR adder 2", 1
-		xyLabels = "RPM", "TPS"
+		xyLabels = "RPM", "Fueling Load"
 		xBins		= targetAfrBlends2_rpmBins, RPMValue
-		yBins		= targetAfrBlends2_loadBins, TPSValue
+		yBins		= targetAfrBlends2_loadBins, fuelingLoad
 		zBins		= targetAfrBlends2_table
 		gridOrient	= 250, 0, 340
 
