TS: etb indicator: pick etb error from etb1etbErrorCodeBlinker

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -1870,7 +1870,7 @@ gaugeCategory = GPPWM Outputs
 	indicator =					{ isTriggerError},			"Trigger OK",		"Trigger ERR",  white,  black,	red,  black
 	indicator = { fuelCutReasonBlinker  != 0 }, "Injection OK", { Fuel cut: bitStringValue(fuelIgnCutCodeList, fuelCutReason)}, white, black, yellow, black
 	indicator = { sparkCutReasonBlinker != 0 }, "Ignition OK",  { Ign cut: bitStringValue(fuelIgnCutCodeList, sparkCutReason)}, white, black, yellow, black
-	indicator = { etb1etbErrorCodeBlinker != 0 }, "ETB OK",  { ETB: bitStringValue(etbCutCodeList, etb1etbErrorCode)}, white, black, yellow, black@@if_ts_show_etb
+	indicator = { etb1etbErrorCodeBlinker != 0 }, "ETB OK",  { ETB: bitStringValue(etbCutCodeList, etb1etbErrorCodeBlinker)}, white, black, yellow, black@@if_ts_show_etb
 
 	; minor info
 	indicator =						{ fan1m_state },				"Fan off",				"Fan on",  white,  black,  green,  black
