Place `Tuning Detected` indicator on `Short term fuel trim` dialog (closes #7515)

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -4230,7 +4230,13 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		field = "Max add",								stft_cellCfgs4_maxAdd
 		field = "Max remove",							stft_cellCfgs4_maxRemove
 
-	dialog = fuelClosedLoopDialog, "Short term fuel trim"
+	indicatorPanel = fuelClosedLoopIndicatorsPanel
+		indicator = { isTuningNow },    "", "Tuning Detected",  white,  black,  green,  black
+
+	dialog = fuelClosedLoopIndicators, "Indicators"
+		panel = fuelClosedLoopIndicatorsPanel
+
+	dialog = fuelClosedLoopSettings, "Short term fuel trim"
 		field = "Enabled",								fuelClosedLoopCorrectionEnabled
 
 		field = "Startup delay"							stft_startupDelay, {fuelClosedLoopCorrectionEnabled == 1}
@@ -4241,6 +4247,9 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		field = "Adjustment deadband",					stft_deadband, {fuelClosedLoopCorrectionEnabled == 1}
 		field = "Ignore error magnitude",				stftIgnoreErrorMagnitude, {fuelClosedLoopCorrectionEnabled == 1}
 
+	dialog = fuelClosedLoopDialog
+		panel = fuelClosedLoopIndicators
+		panel = fuelClosedLoopSettings
 		panel = stftPartitioning, {fuelClosedLoopCorrectionEnabled == 1}
 		panel = stftPartitionSettingsIdle, {fuelClosedLoopCorrectionEnabled == 1}
 		panel = stftPartitionSettingsOverrun, {fuelClosedLoopCorrectionEnabled == 1}
